- Prevent to show the username in an URL for the FileMaker_FX data class on the debug mode.
- Prevent to show the password in an URL for the FileMaker_FX data class on the debug mode in some cases when using the Native Authentication.
- Show the link of the definition file editor on the debug mode only if "INTER-Mediator-Support" directory exists.
- [SECURITY FIX] Check operators in settings, and quote any field names for PDO.
- [BUG FIX] Fix displaying of new lines in textarea when using Internet Explorer 11.
- [BUG FIX] Prevent increasing new lines when editing data in textarea with Internet Explorer 8.
- [BUG FIX] Revise MediaAccess.php to fix displaying of the FileMaker's container fields if the name of the table (layout) contains 'class'.
- [BUG FIX] Fix converterFromUserToDB method of DataConverter_Currency class to consider the currency mark and digit group separator (',').

Ver.3.10 (2013/11/2)
- Support FileMaker's portal objects (by specifying 'relation' => array('portal' => true) ).
- New sample (Master-Detail Style Page for FileMaker's portal access version) is added.
- Modify FX.php for FileMaker Server to enable the "fmalt" and retrieve the record id on portal objects.
- Modify FX.php for FileMaker Server to disable the surrogate input patch when using FileMaker Server 12
  (by specifying $dbDataType = 'FMPro12' in params.php).
- Check availability of BC Math functions of PHP. INTER-Mediator requires BC Math for native authentication.
- Check the compatibility mode of Internet Explorer on checking browsers.
- [SECURITY FIX] Database connection information (the 'password' key etc.) in a definition file doesn't send to clients.
- [SECURITY FIX] Fix SQL injection issue when using PDO.
- [INFO] INTER-Mediator requires FileMaker Server 10 or later, OS X v10.6 or later if using FileMaker Server.
- [BUG FIX] Fix DataConverter_FMDateTime and DataConverter_MySQLDateTime's issue on Windows.